<resources>
    <string name="app_name">Gesleben</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="recorder_normal">hold to talk</string>
    <string name="recorder_recording">Loosen the finger</string>
    <string name="recorder_want_cancel">release to cancel</string>
    <string name="investigate">please comment on this service and click the corresponding option to complete the evaluation</string>
    <string name="logout">exit</string>
    <string name="topeople">turn artficial</string>
    <string name="send">send</string>
    <string name="ykf_copy_num">copy number</string>
    <string name="ykf_copyok">Copied</string>
    <string name="numbers01">There are more consultations at the moment, and you am No.</string>
    <string name="number02"> </string>
    <string name="good_7moor">\"7moor\" ,  the best customer service</string>
    <string name="im_sdk_kf">contant online customer in time</string>
    <string name="video_voice_text">video、voice、type、expression、photo、file</string>
    <string name="all_not_string">no problem！</string>
    <string name="contact_im">Let\'s go</string>
    <string name="name">name</string>
    <string name="writedrown_msg">The other side withdrew a message </string>
    <string name="titlename">title</string>
    <string name="content">content</string>
    <string name="nohelp">useless</string>
    <string name="yeshelp">helpfulness</string>
    <string name="close">close</string>
    <string name="leavemsg">leave message</string>
    <string name="pleaseleavemsg">message us~</string>
    <string name="submit_leavemsg">commit massage</string>
    <string name="cancelsend">release to cancel</string>
    <string name="good">good</string>
    <string name="file_name">file name</string>
    <string name="very_satisfaction">Very Satisfied</string>
    <string name="satisfaction">satisfaction</string>
    <string name="not_satisfaction">dissatisfaction</string>
    <string name="cancel">cancel</string>
    <string name="setting">setting</string>
    <string name="complete">finish</string>
    <string name="now_robit">The robot is serving you.</string>
    <string name="other_writing">typing...</string>
    <string name="people_not_online">the customer service is offline</string>
    <string name="people_now">The customer service is serving you.</string>
    <string name="people_isleave">The customer service ended the conversation</string>
    <string name="chat_img">gallery</string>
    <string name="chat_evaluate">evaluation</string>
    <string name="chat_file">file</string>
    <string name="warm_prompt">warm prompt</string>
    <string name="doyouneed">The customer service ended the conversation, do you want </string>
    <string name="continuecall">typing</string>
    <string name="back">quit</string>
    <string name="doyouneedother">Your exclusive customer service is offline, do you need other customer service?</string>
    <string name="need">need</string>
    <string name="noneed">not need</string>
    <string name="topeoplesucceed">Transfer of artificial service to success</string>
    <string name="sendfiletoobig">Uploading files cannot be greater than 200 MB.</string>
    <string name="seiveceforyou"> is serving for you</string>
    <string name="receivepeopleaction">Receive manual intervention</string>
    <string name="iknow">i know</string>
    <string name="notpermession">Don\'t have permission,about to exit!</string>
    <string name="notnetwork">No network connections are currently available</string>
    <string name="sorryconfigurationiswrong">consult function cant be reached</string>
    <string name="sdkinitwrong">system initialization failed</string>
    <string name="thinks_01">We are very happy to solve the problem for you!</string>
    <string name="thinks_02">We are very sorry that I have not solved your problem!</string>
    <string name="url_failure">incorrect link！</string>
    <string name="evaluate_succeed">succeed</string>
    <string name="haddownload">downloaded</string>
    <string name="downloading">downloading...</string>
    <string name="sended">sended</string>
    <string name="reading">reading...</string>
    <string name="peer_no_number">numbers of peer is empty</string>
    <string name="satisfy_title" translatable="false">Thank you for using our service, please rate this service!</string>
    <string name="satisfy_thank" translatable="false">Thank you for your evaluation of this service, I wish you a happy life, goodbye!</string>
    <string name="wait_link">wainting link</string>
    <string name="chat_question">Commonproblems</string>
    <string name="open_camera">Please turn on camera permissions</string>
    <string name="voice_to_text_error">voice to text error</string>
    <string name="voice_to_text_btn">voice to text</string>
    <string name="voice_input">Voice input</string>
    <string name="ykf_read">read</string>
    <string name="ykf_call">call</string>
    <string name="ykf_unread">unread</string>
    <string name="ykf_maybe_telphone">It could be a phone number. You can</string>
    <string name="ykf_no_imagepick">There may not be photo albums in the phone</string>
    <string name="ykf_nologin_timeout">The session has been closed by the system because you have not been connected for a long time~</string>
    <string name="ykf_nonetwork_error">The system detects a network abnormality, you may not receive customer service messages, please exit and try again~</string>
    <string name="ykf_recording_error">Recording failed, please try again</string>
    <string name="ykf_notify_otheragent">Other agents have been notified to serve you</string>
    <string name="ykf_notify_otheragent_fail">Notify other agents of failure</string>
    <string name="ykf_not_robot_send">Non-robot dialogue, this message cannot be sent</string>
    <string name="ykf_not_netwokr_error">Your network is abnormal</string>
    <string name="ykf_httpfun_error">Get interface error</string>
    <string name="ykf_evaluation_timeout">Review timed out</string>
    <string name="ykf_evaluation_robot">Evaluation of robot services</string>
    <string name="ykf_solved_ok">solved</string>
    <string name="ykf_solved_fail">unsolved</string>
    <string name="ykf_robot_evaluation_ok">Robot evaluation is successful</string>
    <string name="ykf_robot_evaluation_fail">Robot evaluation failed</string>
    <string name="ykf_chatbegin_fail">Failed to open session</string>
    <string name="ykf_not_support_file">This type of file is not currently supported</string>
    <string name="ykf_select_scu">Choose schedule</string>
    <string name="ykf_select_peer">Select skill group</string>
    <string name="ykf_chatfinish_reopen">The current session has been closed, whether to reopen the session</string>
    <string name="ykf_chatbegin">Start conversation</string>
    <string name="ykf_chatbegin_reconnect">Reconnect</string>
    <string name="ykf_loadmore_fail">Load more failed</string>
    <string name="ykf_autotext_fail_reclick">:Failed to convert text, please click to convert again</string>
    <string name="ykf_autotext_fail_nocheck">:Unrecognized voice message</string>
    <string name="ykf_autotext_fail_solong">:Voice is too long and cannot be converted temporarily</string>
    <string name="ykf_submit_review">Submit review</string>
    <string name="ykf_submit_thanks">Thank you for using our service, please rate this service！</string>
    <string name="ykf_submit_thankbay">Thank you for your evaluation of this service, I wish you a happy life, goodbye！</string>
    <string name="ykf_submit_reviewreason">Please fill in the reason for satisfaction evaluation</string>
    <string name="ykf_submit_reviewtag">Please select the satisfaction evaluation label</string>
    <string name="ykf_submit_reviewchoose">Please select a review option</string>
    <string name="ykf_submit_reviewfail">Evaluation submission failed</string>
    <string name="ykf_wait">Please wait...</string>
    <string name="ykf_no_data">no data</string>
    <string name="ykf_no_datamore">No more data</string>
    <string name="ykf_save_pic">save Picture</string>
    <string name="ykf_save_pic_ok">Picture saved successfully</string>
    <string name="ykf_save_pic_fail">Failed to save picture, please try again later</string>
    <string name="ykf_please_leavemessage">Please leave a message</string>
    <string name="ykf_please_leavemessage_replay">Please leave a message, we will contact you as soon as possible</string>
    <string name="ykf_please_required">Is required</string>
    <string name="ykf_up_leavemessageok">Submit message successfully</string>
    <string name="ykf_up_leavemessage_fail">Failed to submit message</string>
    <string name="ykf_put_edit">Please enter content</string>
    <string name="ykf_find_your_order">Please select the order you want to check</string>
    <string name="ykf_noexpress">No logistics information</string>
    <string name="ykf_lookmore">see more</string>
    <string name="ykf_look_express">View complete logistics information</string>
    <string name="ykf_reselect">Reselect</string>
    <string name="ykf_waybill_number">Waybill number:</string>
    <string name="ykf_sendto_agent">Issued to agent</string>
    <string name="ykf_have_been_received">Have been received</string>
    <string name="ykf_copy">copy</string>
    <string name="ykf_copy_success">Has been copied to the pasteboard</string>
    <string name="ykf_call_time">Call duration:</string>
    <string name="ykf_video_cancle">Video session cancelled</string>
    <string name="ykf_video_refuse">The other party declined the video invitation</string>
    <string name="ykf_video_send">Video sent by the other party</string>
    <string name="ykf_video_publish">Sent video</string>
    <string name="ykf_nopeer">No skill group</string>
    <string name="ykf_now_back">back</string>
    <string name="ykf_leave_msg">Leaving message</string>
    <string name="ykf_leave_content">content</string>
    <string name="ykf_please_choosemulit">Please select first</string>
    <string name="satisfy_title_name" translatable="false">Custom service review</string>
    <string name="init_failed" translatable="false">Custom system failed to initialized:%d</string>
</resources>
