<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_num_pop_num"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="@color/color_666666"
        android:textSize="14sp"
        tools:text="adfadsfasdfadsffa " />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ededed" />

    <TextView
        android:id="@+id/tv_callnum"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/ykf_call"
        android:textColor="@color/color_151515"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_ededed" />

    <TextView
        android:id="@+id/tv_copynum"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/ykf_copy_num"
        android:textColor="@color/color_151515"
        android:textSize="16sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_f5f5f5" />

    <TextView
        android:id="@+id/tv_backnum"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_3c3c3c"
        android:textSize="16sp" />
</LinearLayout>